<resources>
    <string name="app_name">TestApp</string>

    <string name="alreadyaccount">Already have an account?</string>
    <string name="signin">LOGIN</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="mobile">Mobile No</string>
    <string name="address">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="storelocator">Store Locator</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet</string>
    <string name="signupas">Sign up as</string>
    <string name="user">User</string>
    <string name="storeowner">Store Owner</string>
    <string name="login">Login</string>
    <string name="bd_rgn">bd_rgn</string>
    <string name="loginasuser">Login as User</string>
    <string name="loginasstore">Login as Store Owner</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="dontaccount">Don\'t have an account? </string>
    <string name="forgotpass">Forgot Password</string>
    <string name="enteremail">Enter your registered email id</string>
    <string name="send">Send</string>
    <string name="changepass">Change Password</string>
    <string name="enterverifycode">Enter verification code\n sent to your registered email id</string>
    <string name="verifycode">Verification Code</string>
    <string name="storename">Store Name</string>
    <string name="contactname">Contact Name</string>
    <string name="storeaddress">Store Address</string>
    <string name="findyournearest">Find Your Nearest Store</string>
    <string name="startshopping">and Start Shopping</string>
    <string name="selectmanually">Select it Manually</string>
    <string name="storelocations">Store Locations</string>
    <string name="search">Search</string>


    <string-array name="loggeduser">
        <item>@string/loginasuser</item>
        <item>@string/loginasstore</item>
    </string-array>
</resources>
