<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/forgot_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storelocator"
            android:textColor="#6cad57"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            fontPath="Raleway-SemiBold.ttf"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvAppSubHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loremipsum"
            android:textColor="#838080"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            fontPath="Raleway-Regular.ttf"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/bg_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_pass_icon"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bd_rgn" />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textColor="#606060"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            fontPath="Raleway-Medium.ttf"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvEnterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enteremail"
            android:textColor="#838080"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            fontPath="Raleway-Regular.ttf"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginStart="35dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:hint="@string/email"
                android:drawableStart="@drawable/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                fontPath="Raleway-Regular.ttf"
                android:textColor="@color/editTextColor"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/btn"
            android:textColor="#ffffff"
            fontPath="Raleway-Medium.ttf"
            android:enabled="true"
            android:layout_gravity="center"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>